--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
  
 body{
-    background-color: green;
+    background-color: beige;
 }
 
 .hellotxt{
@@ -23,4 +23,13 @@ body{
     border-radius: 25px;
     margin: auto;
     padding: 2px;
+}
+
+#mylist{
+    text-align: center;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    list-style-type: none;
+    font-size: 30px;
+    
 }
