css is now more compact

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
     background-color: beige;
 }
 
-.hellotxt{
+.hellotxt, .container, #mylist{
     text-align: center;
     font-family: Arial, sans-serif; 
     background-color: beige;
@@ -11,19 +11,10 @@ body{
     border-radius: 25px;
     margin: auto;
     padding: 2px;
+    font-size: 15px;
 }
 
 .clear { clear: both;}
-
-.container{
-    text-align: center;
-    font-family: Arial, sans-serif; 
-    background-color: beige;
-    width: 33%;
-    border-radius: 25px;
-    margin: auto;
-    padding: 2px;
-}
 
 #mylist{
     text-align: center;
@@ -31,5 +22,4 @@ body{
     padding: 12px 8px 12px 40px;
     list-style-type: none;
     font-size: 30px;
-    
 }
