--- a/main.css
+++ b/main.css
@@ -23,3 +23,15 @@ body{
     list-style-type: none;
     font-size: 30px;
 }
+
+#button{
+    display: inline-block;
+	background: transparent;
+	color: inherit;
+	font: inherit;
+	border: 0;
+	outline: 0;
+	padding: 0;
+	transition: all 200ms ease-in;
+	cursor: pointer;
+}
