more compact css

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
     background-color: beige;
 }
 
-.hellotxt{
+.hellotxt, .container, #mylist{
     text-align: center;
     font-family: Arial, sans-serif; 
     background-color: beige;
@@ -11,33 +11,22 @@ body{
     border-radius: 25px;
     margin: auto;
     padding: 2px;
+    font-size: 15px;
 }
 
 .clear { clear: both;}
-
-.container{
-    text-align: center;
-    font-family: Arial, sans-serif; 
-    background-color: beige;
-    width: 33%;
-    border-radius: 25px;
-    margin: auto;
-    padding: 2px;
-}
 
 #mylist{
     text-align: center;
     position: relative;
     padding: 12px 8px 12px 40px;
     list-style-type: none;
-    font-size: 30px;
-    
-    
+    font-size: 15px;
 }
 
 #button{
     display: inline-block;
-	background: transparent;
+    background-color: rgb(218, 218, 218);
 	color: inherit;
 	font: inherit;
 	border: 0;
@@ -46,3 +35,6 @@ body{
 	transition: all 200ms ease-in;
 	cursor: pointer;
 }
+
+
+
