--- a/poupmsg/style.css
+++ b/poupmsg/style.css
@@ -1,12 +1,20 @@
 * {
     box-sizing: border-box;
   }
+
+  .openButton, .btn, .btncancel, h2, input, textarea, #nametxt, #emailtxt, #messagetxt #name{
+    font-family:Courier New;
+    font-size: 25px;
+  }
+
   .openBtn {
     display: flex;
     justify-content: left;
 
   }
   .openButton {
+    font-size: 15px;
+
     border: none;
     border-radius: 15px;
     background-color: #1c87c9;
@@ -67,13 +75,12 @@
     width: 450px;
     height: 30px;
     padding-left: 5px;
-    font-family: Arial, Helvetica, sans-serif;
     border-radius: 15px;
 
   }
 
   .formContainer input[type=text],
-  .formContainer input[type=password] {
+  .formContainer input[type=message] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 20px 0;
@@ -81,7 +88,7 @@
     background: #eee;
   }
   .formContainer input[type=text]:focus,
-  .formContainer input[type=password]:focus {
+  .formContainer input[type=message]:focus {
     background-color: #ddd;
     outline: none;
   }
