mylist deletebutton better visual effect

--- a/main.css
+++ b/main.css
@@ -98,6 +98,12 @@ h2{
     outline: none;
 }
 
+.delbutton:hover{
+    color: red;
+    font-weight: bold;
+
+}
+
 
 #clock{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
